##Text encoding: utf-8

2009-08-20  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: requires goffice-0.10.
	* libs/gcu/application.cc: fixed after goffice grand rename.
	* libs/gcu/cmd-context.cc: ditto.
	* libs/gcu/loader.cc: ditto.
	* libs/gcu/loader.h: ditto.
	* plugins/loaders/cdx/cdx.cc: ditto.
	* plugins/loaders/cdxml/cdxml.cc: ditto.
	* plugins/loaders/cif/cif.cc: ditto.
	* plugins/loaders/cml/cml.cc: ditto.

2009-08-19  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/document.cc: add Document::GetProperty ().
	* libs/gcp/document.h: ditto.
	* plugins/loaders/cdx/cdx.cc: start working on moleules export.
	* plugins/loaders/cdxml/cdxml.cc: export simple molecules.
	* plugins/loaders/cml/cml.cc: export children of not exported objects.

2009-08-18  Jean Bréfort  <jean.brefort@normalesup.org>
	* plugins/loaders/cdx/cdx.cc: export font table.
	* plugins/loaders/cdxml/cdxml.cc: ditto.

2009-08-17  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: request gnumeric 1.9.10 to build the gnumeric plugin.
	* gnumeric/functions.cc: fixed function description according to new API.
	* plugins/loaders/cdx/cdx.cc: export color table.
	* plugins/loaders/cdxml/cdxml.cc: ditto.

2009-08-16  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gccv/bezier-arrow.cc: implement drawing.
	* libs/gccv/bezier-arrow.h: ditto.
	* libs/gccv/text.cc: fix unicode keyboard input.
	* libs/gccv/text.h: ditto.
	* libs/gcp/tool.cc: ditto.
	* libs/gcp/tool.h: ditto.
	* libs/gcp/view.cc: ditto.
	* plugins/loaders/cdxml/cdxml.cc: use xmlDoc instead of GsfXML.
	* plugins/paint/arrows/curvedarrowtool.cc: create a bezier arrow on click.
	* plugins/paint/text/fragmenttool.cc: fix unicode keyboard input.
	* plugins/paint/text/texttool.cc: ditto.
	* plugins/paint/text/texttool.h: ditto.
	* programs/spectra/window.cc: fix a memory leak.

2009-08-15  Jean Bréfort  <jean.brefort@normalesup.org>
	* gnumeric/functions.cc: make documentation more gnumeric compliant.